reversing mix up - shifting some to parked of intro

--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -10,95 +10,88 @@ number-sections: true
 categories: chapter
 title: 5. Exploration of the Formative Learning Design Process
 ---
--   [Exploration of the Formative Learning Design
-    Process](#exploration-of-the-formative-learning-design-process)
-    -   [Research Questions - April
-        2024](#research-questions---april-2024)
-    -   [Chapter Introduction](#chapter-introduction)
-        -   [MOVED LINK - Applying activity theory to surface
-            contradictions and design tensions experienced by
-            participants and
-            facilitator/s](#moved-link---applying-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators)
-    -   [Vignette and broad analysis using an analysis of activity
-        systems](#vignette-and-broad-analysis-using-an-analysis-of-activity-systems)
-        -   [Context of vignette](#context-of-vignette)
-        -   [Exploring the wider of two activity
-            systems](#exploring-the-wider-of-two-activity-systems)
-        -   [Exploring the 2nd activity
-            system](#exploring-the-2nd-activity-system)
-            -   [Describing the complextity of the object at both
-                Levels](#describing-the-complextity-of-the-object-at-both-levels)
-    -   [Narrative exploration of
-        contradictions](#narrative-exploration-of-contradictions)
-    -   [C1 - contradictions involving the use of game programming and
-        asset authoring
-        tools](#c1---contradictions-involving-the-use-of-game-programming-and-asset-authoring-tools)
-        -   [Summary of challenge caused by contradictions in a
-            nutshell](#summary-of-challenge-caused-by-contradictions-in-a-nutshell)
-        -   [Using a starter game template within a code
-            playground](#using-a-starter-game-template-within-a-code-playground)
-            -   [Code playground.](#code-playground.)
-            -   [Starting template](#starting-template)
-        -   [Creating key affordances](#creating-key-affordances)
-            -   [Variable editing for player
-                movement](#variable-editing-for-player-movement)
-            -   [Level design and
-                prototyping](#level-design-and-prototyping)
-            -   [Use of game assets](#use-of-game-assets)
-                -   [Simple block graphics](#simple-block-graphics)
-            -   [Distributed approach to asset
-                creation](#distributed-approach-to-asset-creation)
-        -   [Resolution of C1 / LINK](#resolution-of-c1-link)
-    -   [C2 - Contradictions associated with project navigation and use
+-   [Research Questions - April 2024](#research-questions---april-2024)
+-   [Chapter Introduction](#chapter-introduction)
+    -   [MOVED LINK - Applying activity theory to surface contradictions
+        and design tensions experienced by participants and
+        facilitator/s](#moved-link---applying-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators)
+-   [Vignette and broad analysis using an analysis of activity
+    systems](#vignette-and-broad-analysis-using-an-analysis-of-activity-systems)
+    -   [Context of vignette](#context-of-vignette)
+    -   [Exploring the wider of two activity
+        systems](#exploring-the-wider-of-two-activity-systems)
+    -   [Exploring the 2nd activity
+        system](#exploring-the-2nd-activity-system)
+        -   [Describing the complextity of the object at both
+            Levels](#describing-the-complextity-of-the-object-at-both-levels)
+-   [Narrative exploration of
+    contradictions](#narrative-exploration-of-contradictions)
+-   [C1 - contradictions involving the use of game programming and asset
+    authoring
+    tools](#c1---contradictions-involving-the-use-of-game-programming-and-asset-authoring-tools)
+    -   [Summary of challenge caused by contradictions in a
+        nutshell](#summary-of-challenge-caused-by-contradictions-in-a-nutshell)
+    -   [Using a starter game template within a code
+        playground](#using-a-starter-game-template-within-a-code-playground)
+        -   [Code playground.](#code-playground.)
+        -   [Starting template](#starting-template)
+    -   [Creating key affordances](#creating-key-affordances)
+        -   [Variable editing for player
+            movement](#variable-editing-for-player-movement)
+        -   [Level design and
+            prototyping](#level-design-and-prototyping)
+        -   [Use of game assets](#use-of-game-assets)
+            -   [Simple block graphics](#simple-block-graphics)
+        -   [Distributed approach to asset
+            creation](#distributed-approach-to-asset-creation)
+    -   [Resolution of C1 / LINK](#resolution-of-c1-link)
+-   [C2 - Contradictions associated with project navigation and use of
+    documentation](#c2---contradictions-associated-with-project-navigation-and-use-of-documentation)
+    -   [Description of contradictions related to
+        documentation](#description-of-contradictions-related-to-documentation)
+    -   [Quick Start Cards](#quick-start-cards)
+    -   [Structuring instructional tutorial resources and code
+        snippets](#structuring-instructional-tutorial-resources-and-code-snippets)
+    -   [Resolution of C2](#resolution-of-c2)
+-   [C3 - Responding to tensions and barriers in cultural aspects of the
+    game making
+    activity](#c3---responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity)
+    -   [Social coding processes](#social-coding-processes)
+        -   [Remixing, peer learning, and choice of starting template
+            MERGE
+            UP](#remixing-peer-learning-and-choice-of-starting-template-merge-up)
+        -   [Use of side missions to encourage varied creative
+            practices](#use-of-side-missions-to-encourage-varied-creative-practices)
+-   [Chapter Discussion](#chapter-discussion)
+    -   [On Affordances, DS and DBR (argumentative grammar of 3GAT /
+        DBR)](#on-affordances-ds-and-dbr-argumentative-grammar-of-3gat-dbr)
+        -   [Comparing to Microworlds & constructionist design
+            priniciples](#comparing-to-microworlds-constructionist-design-priniciples)
+        -   [The potentially awesome impact of lifting the lid on
+            authentic technologies
+            -](#the-potentially-awesome-impact-of-lifting-the-lid-on-authentic-technologies--)
+    -   [Rising to the concrete - the emergence of GDPs as a germ cell
         of
-        documentation](#c2---contradictions-associated-with-project-navigation-and-use-of-documentation)
-        -   [Description of contradictions related to
-            documentation](#description-of-contradictions-related-to-documentation)
-        -   [Quick Start Cards](#quick-start-cards)
-        -   [Structuring instructional tutorial resources and code
-            snippets](#structuring-instructional-tutorial-resources-and-code-snippets)
-        -   [Resolution of C2](#resolution-of-c2)
-    -   [C3 - Responding to tensions and barriers in cultural aspects of
-        the game making
-        activity](#c3---responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity)
-        -   [Social coding processes](#social-coding-processes)
-            -   [Remixing, peer learning, and choice of starting
-                template MERGE
-                UP](#remixing-peer-learning-and-choice-of-starting-template-merge-up)
-            -   [Use of side missions to encourage varied creative
-                practices](#use-of-side-missions-to-encourage-varied-creative-practices)
-    -   [Chapter Discussion](#chapter-discussion)
-        -   [On Affordances, DS and DBR (argumentative grammar of 3GAT /
-            DBR)](#on-affordances-ds-and-dbr-argumentative-grammar-of-3gat-dbr)
-            -   [Summary of evolution of learning design tools and
-                processes (specifically in relation to constructionist
-                principles)](#summary-of-evolution-of-learning-design-tools-and-processes-specifically-in-relation-to-constructionist-principles)
-                -   [The potentially awesome impact of lifting the lid
-                    on authentic technologies
-                    -](#the-potentially-awesome-impact-of-lifting-the-lid-on-authentic-technologies--)
-                -   [Comparing to Microworlds & constructionist design
-                    priniciples](#comparing-to-microworlds-constructionist-design-priniciples)
-        -   [**Emergence of GDPs as a germ cell of
-            activity**](#emergence-of-gdps-as-a-germ-cell-of-activity)
-            -   [Synthesis effect of UMC + collection of
-                GDPS](#synthesis-effect-of-umc-collection-of-gdps)
-            -   [and what this synthesis has to say about participant
-                agency
-                -](#and-what-this-synthesis-has-to-say-about-participant-agency--)
-        -   [Link to next chapter/s](#link-to-next-chapters)
-    -   [Parking Lot](#parking-lot)
-        -   [Developing Digital Literacy skills / Fluency -
-            OPERATIONS](#developing-digital-literacy-skills-fluency---operations)
-        -   [Tensions in tool use emerging between agency and
-            authenticity](#tensions-in-tool-use-emerging-between-agency-and-authenticity)
-        -   [Summary of barriers and tensions explored in this
-            chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter)
-    -   [Parked from the first
-        section.](#parked-from-the-first-section.)
-        -   [Shared object as GDP move to Ch
-            5](#shared-object-as-gdp-move-to-ch-5)
-        -   [Perhaps reintegrate above](#perhaps-reintegrate-above)
-        -   [Operations / fluidity](#operations-fluidity)
+        activity](#rising-to-the-concrete---the-emergence-of-gdps-as-a-germ-cell-of-activity)
+        -   [Synthesis effect of UMC + collection of
+            GDPS](#synthesis-effect-of-umc-collection-of-gdps)
+        -   [and what this synthesis has to say about participant
+            agency - OR MOVE
+            UP?](#and-what-this-synthesis-has-to-say-about-participant-agency---or-move-up)
+    -   [Link to next chapter/s](#link-to-next-chapters)
+-   [Parking Lot](#parking-lot)
+    -   [Developing Digital Literacy skills / Fluency -
+        OPERATIONS](#developing-digital-literacy-skills-fluency---operations)
+    -   [Tensions in tool use emerging between agency and
+        authenticity](#tensions-in-tool-use-emerging-between-agency-and-authenticity)
+    -   [Summary of barriers and tensions explored in this
+        chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter)
+-   [Parked from the first section.](#parked-from-the-first-section.)
+    -   [Shared object as GDP move to Ch
+        5](#shared-object-as-gdp-move-to-ch-5)
+    -   [Perhaps reintegrate above](#perhaps-reintegrate-above)
+    -   [Operations / fluidity](#operations-fluidity)
+
 # Exploration of the Formative Learning Design Process
 
 ## Research Questions - April 2024
@@ -118,42 +111,14 @@ This chapter contains a large number of headings in draft form. These will be re
 
 ## Chapter Introduction  
 
-This chapter contains a high level of detail on the evolution of the learning design to situate the findings of the next chapters and to allow the design to be by other practitioners and researchers in this area. The format of this chapter can be conceived as a design narrative [@hoadley_creating_2002-1]. To do to this I include narrative descriptions of shifts between phases of design as it mutually evolved over time. The concept of design narrative emerged within DBR as a way to communicate the important detail of context [@hoadley_creating_2002-1; @brase_knowledge_2024; @bell_theoretical_2004].
-
-DBR lacks a single argumentative grammar [@brase_knowledge_2024], a set of concepts and approaches which aid in the posing of questions in a way which helps communicate the essence the design and potential for its replication or generalisation. Brase [-@brase_knowledge_2024] notes the inherent tension between flexibility and coherence in approach. However, in outlining an argumentative grammar of an intervention process aligned with 3GAT,
-Sannino and Engestrom [@cole_toward_2014] propose the core principles of formative interventions, namely double stimulation and the process of rising to the concrete via a germ cell concept. In addition they note the importance of transformative agency, analysis of contradictions, expansion and evolution of design, and the importance of concept formation. This chapter uses this approach to aid discussion of the evolution of the learning design and situate the findings and analysis of following chapters.
+This chapter contains a high level of detail on the evolution of the learning design to situate the findings of the next chapters and to allow the design to be by other practitioners and researchers in this area. The format of this chapter can be conceived as a design narrative [@hoadley_creating_2002-1]. To do to this I include narrative descriptions of shifts between phases of design as it mutually evolved over time. The concept of design narrative emerged within DBR as a way to communicate the important detail of context [@hoadley_creating_2002-1; @brase_knowledge_2024; @bell_theoretical_2004]. In line with discussion of Chapter 3, this process is augmented by adding argumentative grammar of formative interventions prposed by the Helsinki school.
 
 
 <!-- In particular, the evolution of the key pedagogical features is analysed via  emerging tensions between system elements in learning design. Exploration of the shifts in the design of the intervention is done via a development of a design narrative which explores the driving forces behind changes in the design of each phase. -->
 
-In the previous chapter, I described phases of delivery of the formative intervention in the form of a family game making programme. To begin this chapter I describe activity by identifying activity units/systems, system elements and the complex nature of the object of activity at two scopes of activity using the context of vignette.
+In Chapter 4 I described phases of delivery of the formative intervention in the form of a family game making programme. To begin this chapter I describe activity by identifying activity units/systems, system elements and the complex nature of the object of activity at two scopes of activity using the context of vignette. I then take a wider focus including technical and social observations from my research journal, additional session notes, and analysis of created artefacts of games and documentation to continue the design narrative via an in-depth analysis of three key areas of emerging areas of contradictions in activity and resultant interventions which addressed those contradictions. The three main areas of contradictions are explored in this chapter are as follows: in use of software tool use in P1 and P2, those associated with project navigation and the use of supporting documentation in P2, and finally contradictions surrounding participant identity within the game making activity.
 
-THIS PROCESS NEEDED?
-I then take a wider focus including technical and social observations from my research journal, additional session notes, and analysis of created artefacts of games and documentation to continue the design narrative via an in-depth analysis of three key areas of emerging areas of contradictions in activity and resultant interventions which addressed those contradictions. The three main areas of contradictions are explored in this chapter are as follows: in use of software tool use in P1 and P2, those associated with project navigation and the use of supporting documentation in P2, and finally contradictions surrounding participant identity within the game making activity.
-
-The discussion section of this chapter includes a synthesis of key issue arising in the evolution of the learning design and signposts where reactions to this design are explore in following chapters.  
-
-Issues that arise include
-  - a final section identifies game design patterns (GDPs) as a "germ cell" concept that emerged in several forms in the evolution of the learning design.
-
-
-
-
-#### MOVED LINK - Applying activity theory to surface contradictions and design tensions experienced by participants and facilitator/s
-
-NOTE - THIS WAS INTERUPTING FLOW - SO MOVED HERE
-
-Identifying shifts in participant activity in terms of scope facilitates analysis of the complex and interwoven cultural, social and personal actions in a communities activity [@rogoff_observing_1995]. Above, Toby shifts between the wider activity of making a game and sharing it with peers and narrower actions implementing concrete code structures. This aspect is developed in chapter five.
-
-In addition to these shifts in scope, analysis of community processes also involves transformation over time.  The next section offers a description of the evolution of tool use in different phases of the study with an aim to situate analysis of emerging tensions in the use of tools, resources and processes in the following section.
-
-The followings sections use a process of analysis of contradictions between system elements of the activity systems outlined above. The processes is a formative intervention (explored in chapter three) in that the surfacing of tensions due to changes in the learning design over time are examined. As noted in the introduction, this chapter explores the following areas of contradictions: contradictions in the technical tool use of design, contradictions shaping the development of supporting documentation, contradictions to do with issues of identity and the cultural dimension of participation.
-
-<!-- For example a common contradiction may be an immediate goal of children to mess around, play games and have fun while the goals of parent may be to maximise the acquisition of skills -->
-
-<!-- I chart the detail of the evolution of resources and other responses used helps illuminate broader, systemic issues concerns in the overall activity [@barab_using_2002]. -->
-
-
+The discussion section of this chapter begins a synthesis of concrete issues arising in the evolution of the learning design drawing on key foci of 3GAT namely, double stimulation and its relation to participant agency, and the process of rising to the concrete through exploration of a germ cell concept (in the form of implementation of gameplay design patterns).
 
 
 ## Vignette and broad analysis using an analysis of activity systems
@@ -989,9 +954,10 @@ While computational fluency is a valid of the objectives of the game making acti
 ### On Affordances, DS and DBR (argumentative grammar of 3GAT / DBR)
 
 <!-- - Affordances outlined in this learning design  double stimulation, give a quick summary, different types of agency   -->
-WHAT IS THIS REALLY ADDING?
+DBR lacks a single argumentative grammar [@brase_knowledge_2024], a set of concepts and approaches which aid in the posing of questions in a way which helps communicate the essence the design and potential for its replication or generalisation. Brase [-@brase_knowledge_2024] notes the inherent tension between flexibility and coherence in approach. However, in outlining an argumentative grammar of an intervention process aligned with 3GAT,
+Sannino and Engestrom [@cole_toward_2014] propose the core principles of formative interventions, namely double stimulation and the process of rising to the concrete via a germ cell concept. In addition they note the importance of transformative agency, analysis of contradictions, expansion and evolution of design, and the importance of concept formation. This chapter uses this approach to aid discussion of the evolution of the learning design and situate the findings and analysis of following chapters.
 
-In returning to the role of 3GAT concepts in outlining the argumentative grammar of this design, the following section expresses some of the key features of the design narrative.
+In returning to the role of 3GAT concepts in outlining the argumentative grammar of this  design, the following section expresses some of the key features of the design narrative.
 
 **Returning to discussion the  emergent and mutual nature of the design - inline with DBR principles**
 
@@ -1301,3 +1267,19 @@ A student helper shares a question -  "Is yours the one where level one is harde
 
 While this vignette shows that the participant has developed fluid use of both software tools and documentation and support sources, these are areas where significant contradictions emerged which shaped the path of the support given.
 OPERATIONS - WHERE? MOVE
+
+
+
+#### MOVED LINK - Applying activity theory to surface contradictions and design tensions experienced by participants and facilitator/s
+
+NOTE - THIS WAS INTERUPTING FLOW - SO MOVED HERE
+
+Identifying shifts in participant activity in terms of scope facilitates analysis of the complex and interwoven cultural, social and personal actions in a communities activity [@rogoff_observing_1995]. Above, Toby shifts between the wider activity of making a game and sharing it with peers and narrower actions implementing concrete code structures. This aspect is developed in chapter five.
+
+In addition  analysis of community processes also involves transformation over time.  The next section offers a description of the evolution of tool use in different phases of the study with an aim to situate analysis of emerging tensions in the use of tools, resources and processes in the following section.
+
+The followings sections use a process of analysis of contradictions between system elements of the activity systems outlined above. The processes is a formative intervention (explored in chapter three) in that the surfacing of tensions due to changes in the learning design over time are examined. As noted in the introduction, this chapter explores the following areas of contradictions: contradictions in the technical tool use of design, contradictions shaping the development of supporting documentation, contradictions to do with issues of identity and the cultural dimension of participation.
+
+<!-- For example a common contradiction may be an immediate goal of children to mess around, play games and have fun while the goals of parent may be to maximise the acquisition of skills -->
+
+<!-- I chart the detail of the evolution of resources and other responses used helps illuminate broader, systemic issues concerns in the overall activity [@barab_using_2002]. -->
